--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #dc143c;
+	background-color: #28a745;
 
 }
 #main {
@@ -7,5 +7,5 @@ body {
 	background-color: white;
 	margin-top: 100px;
 	border-radius: 20px;
-	
+
 }
