--- a/style.css
+++ b/style.css
@@ -7,5 +7,18 @@ body {
 	background-color: white;
 	margin-top: 100px;
 	border-radius: 20px;
+	border-radius: 20px
 
+}
+#info{
+	margin-left: 20px;
+	padding-top: 2px;
+
+}
+input[type=text]{
+	width: 260px;
+	box-sizing: border-box;
+	border: 2px solid #28a745;
+	border-radius: 4px;
+	
 }
